--- a/samples/full_example/src/styles/global.css
+++ b/samples/full_example/src/styles/global.css
@@ -42,12 +42,19 @@ body {
 }
 
 .card {
-    box-shadow: 0 1px 15px rgba(0, 0, 0, .1);
-    border-radius: 16px;
-    padding: 30px 40px 40px 40px;
+    box-shadow: none;
+    padding: 16px 0;
     border: none;
 }
 
 a {
     text-decoration: none;
+}
+
+@media (min-width: 600px) {
+    .card {
+        box-shadow: 0 1px 15px rgba(0, 0, 0, .1);
+        border-radius: 16px;
+        padding: 30px 40px 40px 40px;
+    }
 }
